--- a/app/templates/user/user.twig
+++ b/app/templates/user/user.twig
@@ -41,7 +41,7 @@
 
         <p><strong>{{ ldapUser.firstName }} {{ ldapUser.lastName }}</strong> can push the following repositories to the specified environments.</p>
 
-        <table class="t75">
+        <table class="tablesaw tablesaw-stack" data-mode="stack">
             <thead>
             <tr>
                 <th>Environment</th>
