--- a/app/templates/group/group.twig
+++ b/app/templates/group/group.twig
@@ -11,7 +11,7 @@
 
     {% if repos %}
 
-        <table>
+        <table class="tablesaw tablesaw-stack" data-mode="stack">
             <thead>
                 <tr>
                     <th>Name</th>
