--- a/app/templates/partials/build-table.twig
+++ b/app/templates/partials/build-table.twig
@@ -1,60 +1,58 @@
-<div>
-    <table>
-        <thead>
-            <th></th>
-            <th>Status</th>
-            <th>Branch</th>
-            <th>Commit</th>
-            <th>Initiator</th>
-            <th>Created</th>
-            <th></th>
-        </thead>
-        <tbody>
-        {% for build in builds %}
-            <tr>
+<table class="tablesaw tablesaw-stack" data-mode="stack">
+    <thead>
+        <th>Build</th>
+        <th>Status</th>
+        <th>Branch</th>
+        <th>Commit</th>
+        <th>Initiator</th>
+        <th>Created</th>
+        <th>Actions</th>
+    </thead>
+    <tbody>
+    {% for build in builds %}
+        <tr>
 
-                <td><a href="{{ urlFor('build', {'repo': build.repository.id, 'build': build.id}) }}">{{ build.id[:10] }}</a> ({{ build.environment.key }})</td>
-                <td>
-                    {% if build.status == 'Success' %}
-                        <span class="circle-green">{{ build.status }}</span>
-                    {% elseif build.status in ['Error', 'Removed'] %}
-                        <span class="circle-red">{{ build.status }}</span>
-                    {% else %}
-                        <span class="circle-orange">{{ build.status }}</span>
-                    {% endif %}
-                </td>
-                <td>{{ build.branch[:20] }}</td>
-                <td>
-                    <a href="{{ githubCommit(build.repository.githubUser, build.repository.githubRepo, build.commit) }}">{{ build.commit[:7] }}</a>
-                    <span class="icon">
-                        <svg viewBox="0 0 32 32">
-                            <use xlink:href="#github"></use>
-                        </svg>
-                    </span>
-                </td>
-                {% if build.user %}
-                    <td><a href="{{ urlFor('user', {'id': build.user.id}) }}">{{ build.user.name[:20] }}</a></td>
-                {% elseif build.consumer %}
-                    <td>{{ build.consumer.name[:20] }}</td>
+            <td><a href="{{ urlFor('build', {'repo': build.repository.id, 'build': build.id}) }}">{{ build.id[:10] }}</a> ({{ build.environment.key }})</td>
+            <td>
+                {% if build.status == 'Success' %}
+                    <span class="circle-green">{{ build.status }}</span>
+                {% elseif build.status in ['Error', 'Removed'] %}
+                    <span class="circle-red">{{ build.status }}</span>
                 {% else %}
-                    <td>Unknown</td>
+                    <span class="circle-orange">{{ build.status }}</span>
                 {% endif %}
-                <td>{{ build.end|date }}</td>
-                <td>
-                    {% if build.status == 'Success' %}
-                        {% if canUserPush(user, build.repository.key, build.server.environment.key) %}
-                            <a href="{{ urlFor('push.start', {'repo': build.repository.key, 'build': build.id}) }}">Push</a>
-                        {% endif %}
+            </td>
+            <td>{{ build.branch[:20] }}</td>
+            <td>
+                <a href="{{ githubCommit(build.repository.githubUser, build.repository.githubRepo, build.commit) }}">{{ build.commit[:7] }}</a>
+                <span class="icon">
+                    <svg viewBox="0 0 32 32">
+                        <use xlink:href="#github"></use>
+                    </svg>
+                </span>
+            </td>
+            {% if build.user %}
+                <td><a href="{{ urlFor('user', {'id': build.user.id}) }}">{{ build.user.name[:20] }}</a></td>
+            {% elseif build.consumer %}
+                <td>{{ build.consumer.name[:20] }}</td>
+            {% else %}
+                <td>Unknown</td>
+            {% endif %}
+            <td>{{ build.end|date }}</td>
+            <td>
+                {% if build.status == 'Success' %}
+                    {% if canUserPush(user, build.repository.key, build.server.environment.key) %}
+                        <a href="{{ urlFor('push.start', {'repo': build.repository.key, 'build': build.id}) }}">Push</a>
                     {% endif %}
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">
-                    No builds found.
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
+                {% endif %}
+            </td>
+        </tr>
+    {% else %}
+        <tr>
+            <td colspan="7">
+                No builds found.
+            </td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
