--- a/sass/partials/patterns/_buttons.scss
+++ b/sass/partials/patterns/_buttons.scss
@@ -41,6 +41,19 @@
     }
 }
 
+.btn--disabled {
+    background-color: $light-grey;
+    border: 1px solid shade($light-grey, 20%);
+    color: tint($grey, 30%);
+
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 shade($light-grey,20%), 0 4px 2px rgba(0, 0, 0, .5);
+    pointer-events: none;
+
+    &:hover {
+        background-color: $light-grey;
+    }
+}
+
 .btn--alt {
     float: right;
 }
